--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,10 +20,14 @@ today = ["chrono"]
 test_lib = []
 
 [dependencies]
+bisection = "0.1.0"
 
 # Template dependencies
 chrono = { version = "0.4.31", optional = true }
+counter = "0.5.7"
 dhat = { version = "0.3.2", optional = true }
+itertools = "0.12.0"
+num = "0.4.1"
 pico-args = "0.5.0"
 tinyjson = "2.5.1"
 
